moved images to public folder

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 }
 
 html, body {
-  background: url('../../public/background/hero-bg.png');
+  background: url('/hero-bg.png');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
