--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -182,13 +182,6 @@ a {
   line-height: 1.6;
 }
 
-@media (min-width: 900px) {
-  .hero-description { 
-    grid-template-columns: 2fr 2.5fr;
-    gap: 2rem;
-    max-width: 60ch;
-  }
-}
 
 /* Hero Buttons */
 
@@ -227,19 +220,22 @@ a {
 /* Hero Buttons - Media Queries */
 
 @media (max-width: 768px) {
-  .hero-section { 
-    padding: 7rem 0 5rem; 
-  }
 
-  .hero-buttons { 
-    width: 100%;
-    gap: .5rem; 
+  .hero-section {
+    padding: 4rem 1rem;
+    font-family: 'Inter', sans-serif; 
   }
 
   .hero-button-primary,
   .hero-button-secondary {
     flex: 1;
     padding: .75rem 1rem;
+  }
+
+  .hero-button-primary p,
+  .hero-button-secondary p {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -396,6 +392,7 @@ a {
   .about-container.two-col {
     gap: 4rem;
   }
+
   .approach-grid {
     grid-template-columns: 1fr;
     gap: 1.25rem;
